refactored some more code to improve the style of it (mostly ui, moved some more util to the wrapper)